	  virtual functions, making them easier to override.   
   - ToolBars for DockContainers automatically use the Frame's ToolBar theme.
   - We can now specify the index of the image in AddToolbarButton.
* Updated CFile:
   - CFile functions are now virtual.
   - OpenFileDialog and SaveFileDialog allow the dialog's title to be specified.
* Updated CToolBar
   - The parent of the dialog (if any) is set when the dialog is created (with
      DoModal or DoModeless), rather than when the CDialog is constructed.
   - SetButtonInfo can now be used to change a ToolBar button's image and 
      command ID.
   - Functions now use CImageList* instead of HIMAGELIST
   - Added support for ToolBar customization.
   - AddButton now also allows us to specify the image's index.
* Updated CDialog
   - Added GetDefID, GotoDlgCtrl, MapDialogRect, NextDlgCtrl, PrevDlgCtrl
	  and SetDefID.
* TRACE now accepts both ANSI and Unicode strings.
* Added project files for VS2013
* Win32++ now has a tidier approach to the switch statements used in WndProc,
  OnNotify, OnNotifyReflect and OnCommand. It is fully backwards compatible
  with older code. Users are encourage to adopt this style to keep the code
  in large switch statements tidy.

Incompatibilities with previous versions
----------------------------------------
* The definition of OnCreate has changed to provide a LPCREATESRUCT. This 
   change will also need to be made in any class overriding OnCreate.
* The constructor of CDialog has changed. It no longer sets the Dialog's
   parent. This is set (if needed) by DoModal or DoModeless.   
* The CSocket functions: Receive; ReceiveFrom; Send; and SendTo now use char
* Programs with frames should now use the IDW_READY resource for "Ready". 
   Add IDW_READY as a string resource to resource.rc
* GetReBarTheme and GetToolBarTheme have been moved to CFrame 
* Other functions have been modified. See below for details.
   
   
Changes in detail
-----------------
- Added LoadCommonControls